--- a/src/index.html
+++ b/src/index.html
@@ -262,7 +262,7 @@
               </tr>
               <tr class="swiper-slide">
                 <td class="prices__first-column"
-                  >Тестирование с выдачей технического заключения</td
+                  >Тестирование с выдачей заключения</td
                 >
                 <td class="prices__second-column">1000р</td>
                 <td class="prices__third-column">30-120 мин</td>
