--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <td class="prices__fourth-column"><button class="prices__button">Заказать</button></td>
               </tr>
               <tr class="swiper-slide">
-                <td class="prices__first-column">Тестирование с выдачей технического заключения</td>
+                <td class="prices__first-column">Тестирование с выдачей заключения</td>
                 <td class="prices__second-column">1000р</td>
                 <td class="prices__third-column">30-120 мин</td>
                 <td class="prices__fourth-column"><button class="prices__button">Заказать</button></td>
