--- a/index.html
+++ b/index.html
@@ -97,42 +97,42 @@
         </article>
       </section>
       <div class="remontBrands">
-        <header class="header-swiper"><h1 class="header-swiper__name">Ремонт техники различных брендов</h1></header>
-        <div class="content-swiper">
+        <header class="remontBrands__header"><h1 class="remontBrands__header-name">Ремонт техники различных брендов</h1></header>
+        <div class="remontBrands__swiper">
           <div class="swiper swiper-brands">
-            <ul class="swiper-wrapper ul-clear">
-              <li class="swiper-slide"><button class="button-link hover"></button></li>
-              <li class="swiper-slide"><button class="button-link hover"></button></li>
-              <li class="swiper-slide"><button class="button-link hover"></button></li>
-              <li class="swiper-slide"><button class="button-link hover"></button></li>
-              <li class="swiper-slide"><button class="button-link hover"></button></li>
-              <li class="swiper-slide"><button class="button-link hover"></button></li>
-              <li class="swiper-slide"><button class="button-link hover"></button></li>
-              <li class="swiper-slide"><button class="button-link hover"></button></li>
-              <li class="swiper-slide"><button class="button-link hover"></button></li>
-              <li class="swiper-slide"><button class="button-link hover"></button></li>
-              <li class="swiper-slide"><button class="button-link hover"></button></li>
+            <ul class="swiper-wrapper remontBrands__wrapper ul-clear">
+              <li class="swiper-slide remontBrands__slide"><button class="button-link hover"></button></li>
+              <li class="swiper-slide remontBrands__slide"><button class="button-link hover"></button></li>
+              <li class="swiper-slide remontBrands__slide"><button class="button-link hover"></button></li>
+              <li class="swiper-slide remontBrands__slide"><button class="button-link hover"></button></li>
+              <li class="swiper-slide remontBrands__slide"><button class="button-link hover"></button></li>
+              <li class="swiper-slide remontBrands__slide"><button class="button-link hover"></button></li>
+              <li class="swiper-slide remontBrands__slide"><button class="button-link hover"></button></li>
+              <li class="swiper- remontBrands__slide"><button class="button-link hover"></button></li>
+              <li class="swiper-slide remontBrands__slide"><button class="button-link hover"></button></li>
+              <li class="swiper-slide remontBrands__slide"><button class="button-link hover"></button></li>
+              <li class="swiper-slide remontBrands__slide"><button class="button-link hover"></button></li>
             </ul>
-            <div class="swiper-pagination"></div>
+            <div class="swiper-pagination remontBrands__pagination"></div>
           </div>
           <button onclick="readMoreB()" class="button-show-more hover">Показать всё</button>
         </div>
       </div>
       <div class="remontTechno">
-        <header class="header-swiper"><h1 class="header-swiper__name">Ремонт различных видов техники</h1></header>
-        <div class="content-swiper">
+        <header class="remontTechno__header"><h1 class="remontTechno__header-name">Ремонт различных видов техники</h1></header>
+        <div class="remontTechno__swiper">
           <div class="swiper swiper-techno">
-            <ul class="swiper-wrapper ul-clear">
-              <li class="swiper-slide">Ремонт ноутбуков<button class="button-link hover"></button></li>
-              <li class="swiper-slide">Ремонт планшетов<button class="button-link hover"></button></li>
-              <li class="swiper-slide">Ремонт ПК<button class="button-link hover"></button></li>
-              <li class="swiper-slide">Ремонт мониторов<button class="button-link hover"></button></li>
-              <li class="swiper-slide">Ремонт смартфонов<button class="button-link hover"></button></li>
-              <li class="swiper-slide">Ремонт граммофонов<button class="button-link hover"></button></li>
-              <li class="swiper-slide">Ремонт принтеров<button class="button-link hover"></button></li>
-              <li class="swiper-slide">Ремонт оборудования<button class="button-link hover"></button></li>
+            <ul class="swiper-wrapper remontTechno__wrapper ul-clear">
+              <li class="swiper-slide remontTechno__slide">Ремонт ноутбуков<button class="button-link hover"></button></li>
+              <li class="swiper-slide remontTechno__slide">Ремонт планшетов<button class="button-link hover"></button></li>
+              <li class="swiper-slide remontTechno__slide">Ремонт ПК<button class="button-link hover"></button></li>
+              <li class="swiper-slide remontTechno__slide">Ремонт мониторов<button class="button-link hover"></button></li>
+              <li class="swiper-slide remontTechno__slide">Ремонт смартфонов<button class="button-link hover"></button></li>
+              <li class="swiper-slide remontTechno__slide">Ремонт граммофонов<button class="button-link hover"></button></li>
+              <li class="swiper-slide remontTechno__slide">Ремонт принтеров<button class="button-link hover"></button></li>
+              <li class="swiper- remontTechno__slide">Ремонт оборудования<button class="button-link hover"></button></li>
             </ul>
-            <div class="swiper-pagination"></div>
+            <div class="swiper-pagination remontTechno__pagination"></div>
           </div>
           <button onclick="readMoreT()" class="button-show-more hover">Показать всё</button>
         </div>
@@ -149,42 +149,42 @@
                 <th class="prices__fourth-column"> </th>
               </tr>
             </thead>
-            <tbody class="swiper-wrapper">
-              <tr class="swiper-slide">
+            <tbody class="swiper-wrapper prices__wrapper">
+              <tr class="swiper-slide prices__slide">
                 <td class="prices__first-column">Диагностика</td>
                 <td class="prices__second-column">Бесплатно</td>
                 <td class="prices__third-column">30 мин</td>
-                <td class="prices__fourth-column"><button class="prices__button">Заказать</button></td>
+                <td class="prices__fourth-column"><button class="prices__button hover">Заказать</button></td>
               </tr>
-              <tr class="swiper-slide">
+              <tr class="swiper-slide prices__slide">
                 <td class="prices__first-column">Замена дисплея</td>
                 <td class="prices__second-column">1000р</td>
                 <td class="prices__third-column">30-120 мин</td>
-                <td class="prices__fourth-column"><button class="prices__button">Заказать</button></td>
+                <td class="prices__fourth-column"><button class="prices__button hover">Заказать</button></td>
               </tr>
-              <tr class="swiper-slide">
+              <tr class="swiper-slide prices__slide">
                 <td class="prices__first-column">Замена полифонического динамика</td>
                 <td class="prices__second-column">1000р</td>
                 <td class="prices__third-column">30-120 мин</td>
-                <td class="prices__fourth-column"><button class="prices__button">Заказать</button></td>
+                <td class="prices__fourth-column"><button class="prices__button hover">Заказать</button></td>
               </tr>
-              <tr class="swiper-slide">
+              <tr class="swiper-slide prices__slide">
                 <td class="prices__first-column">Тестирование с выдачей заключения</td>
                 <td class="prices__second-column">1000р</td>
                 <td class="prices__third-column">30-120 мин</td>
-                <td class="prices__fourth-column"><button class="prices__button">Заказать</button></td>
+                <td class="prices__fourth-column"><button class="prices__button hover">Заказать</button></td>
               </tr>
-              <tr class="swiper-slide">
+              <tr class="swiper-slide prices__slide">
                 <td class="prices__first-column">Замена программного обеспечения</td>
                 <td class="prices__second-column">1000р</td>
                 <td class="prices__third-column">30-120мин</td>
-                <td class="prices__fourth-column"><button class="prices__button">Заказать</button></td>
+                <td class="prices__fourth-column"><button class="prices__button hover">Заказать</button></td>
               </tr>
             </tbody>
             <tfoot>
               <tr>
                 <td>
-                  <div class="swiper-pagination"></div>
+                  <div class="swiper-pagination prices__pagination"></div>
                 </td>
               </tr>
             </tfoot>
