--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       </ul>
       <ul class="header__right-pad no-select ul-clear">
         <li class="header__right-call">
-          <button class="button button-call hover"></button>
+          <button type="button" class="button button-call hover" onclick="window.modalCall.showModal()"></button>
         </li>
         <li class="header__right-chat">
-          <button class="button button-chat hover"></button>
+          <button type="button" class="button button-chat hover" onclick="window.modalFeedback.showModal()"></button>
         </li>
         <li class="header__right-profile">
           <button class="button button-profile hover"></button>
