--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,49 @@
         </li>
       </ul>
     </header>
+    <aside class="menu">
+      <header class="menu__header">
+        <button type="button" class="button button__alt-burger hover"></button>
+        <a class="logo menu__logo" href="#"><img src="<%= imgPath %>logo.svg" alt="Логотип компании" /></a>
+        <button type="button" class="button button__alt-search hover"></button>
+      </header>
+      <main class="menu__main">
+        <nav class="menu__nav">
+          <ul class="menu__list no-select ul-clear">
+            <li class="menu__item"><a class="menu__link hover" href="#">Ремонт техники</a></li>
+            <li class="menu__item"><a class="menu__link hover" href="#">Услуги и сервисы</a></li>
+            <li class="menu__item"><a class="menu__link hover" href="#">Корпоратвным клиентам</a></li>
+            <li class="menu__item"><a class="menu__link hover" href="#">Продавцам техники</a></li>
+            <li class="menu__item"><a class="menu__link hover" href="#">Партнерам</a></li>
+            <li class="menu__item"><a class="menu__link hover" href="#">Производителям</a></li>
+            <li class="menu__item"><a class="menu__link hover" href="#">Наши сервисные центры</a></li>
+            <li class="menu__item"><a class="menu__link hover" href="#">Контакты</a></li>
+          </ul>
+        </nav>
+      </main>
+      <footer class="menu__footer">
+        <ul class="menu__footer-list ul-clear">
+          <li class="menu__call">
+            <button type="button" onclick="window.modalCall.showModal()" class="button button__call hover"></button>
+          </li>
+          <li class="menu__chat">
+            <button type="button" onclick="window.modalFeedback.showModal()" class="button button__chat hover"></button>
+          </li>
+          <li class="menu__profile">
+            <button class="button button__profile hover"></button>
+          </li>
+        </ul>
+        <address class="menu__address">
+          <a class="menu__mail hover" href="mailto: mail@cps.com">mail@cps.com</a><br />
+          <a class="menu__phone hover" href="tel: 88008908900">8 800 890 8900</a>
+        </address>
+        <ul class="language ul-clear">
+          <li><a class="language__link hover" href="#">RU</a></li>
+          <li><a class="language__link hover" href="#">EN</a></li>
+          <li><a class="language__link hover" href="#">CH</a></li>
+        </ul>
+      </footer>
+    </aside>
     <main class="main">
       <section class="content">
         <div class="content__large-bar">
@@ -210,49 +253,6 @@
         </div>
       </footer>
     </main>
-    <div class="menu">
-      <header class="menu__header">
-        <button type="button" class="button button__alt-burger hover"></button>
-        <a class="logo menu__logo" href="#"><img src="<%= imgPath %>logo.svg" alt="Логотип компании" /></a>
-        <button type="button" class="button button__alt-search hover"></button>
-      </header>
-      <main class="menu__main">
-        <nav class="menu__nav">
-          <ul class="menu__list no-select ul-clear">
-            <li class="menu__item"><a class="menu__link hover" href="#">Ремонт техники</a></li>
-            <li class="menu__item"><a class="menu__link hover" href="#">Услуги и сервисы</a></li>
-            <li class="menu__item"><a class="menu__link hover" href="#">Корпоратвным клиентам</a></li>
-            <li class="menu__item"><a class="menu__link hover" href="#">Продавцам техники</a></li>
-            <li class="menu__item"><a class="menu__link hover" href="#">Партнерам</a></li>
-            <li class="menu__item"><a class="menu__link hover" href="#">Производителям</a></li>
-            <li class="menu__item"><a class="menu__link hover" href="#">Наши сервисные центры</a></li>
-            <li class="menu__item"><a class="menu__link hover" href="#">Контакты</a></li>
-          </ul>
-        </nav>
-      </main>
-      <footer class="menu__footer">
-        <ul class="menu__footer-list ul-clear">
-          <li class="menu__call">
-            <button type="button" onclick="window.modalCall.showModal()" class="button button__call hover"></button>
-          </li>
-          <li class="menu__chat">
-            <button type="button" onclick="window.modalFeedback.showModal()" class="button button__chat hover"></button>
-          </li>
-          <li class="menu__profile">
-            <button class="button button__profile hover"></button>
-          </li>
-        </ul>
-        <address class="menu__address">
-          <a class="menu__mail hover" href="mailto: mail@cps.com">mail@cps.com</a><br />
-          <a class="menu__phone hover" href="tel: 88008908900">8 800 890 8900</a>
-        </address>
-        <ul class="language ul-clear">
-          <li><a class="language__link hover" href="#">RU</a></li>
-          <li><a class="language__link hover" href="#">EN</a></li>
-          <li><a class="language__link hover" href="#">CH</a></li>
-        </ul>
-      </footer>
-    </div>
     <dialog id="modalFeedback">
       <div class="modal">
         <header class="modal__header">
