исправил путь к картинкам в коде html

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
           <button type="button" class="button button__burger hover"></button>
         </li>
         <li class="logo header__logo"><a class="hover" href="#">
-          <img src="<%= imgPath %>logo.svg" alt="Логотип компании"/></a>
+          <img src="img/logo.svg" alt="Логотип компании"/></a>
         </li>
       </ul>
       <ul class="header__right-pad no-select ul-clear">
@@ -38,7 +38,7 @@
     <aside class="menu">
       <header class="menu__header">
         <button type="button" class="button button__alt-burger hover"></button>
-        <a class="logo menu__logo" href="#"><img src="<%= imgPath %>logo.svg" alt="Логотип компании" /></a>
+        <a class="logo menu__logo" href="#"><img src="img/logo.svg" alt="Логотип компании" /></a>
         <button type="button" class="button button__alt-search hover"></button>
       </header>
       <main class="menu__main">
@@ -82,7 +82,7 @@
       <section class="content">
         <div class="content__large-bar">
           <div class="content__name">
-            <img class="content__img" src="<%= imgPath %>highlight.svg" alt=""/>
+            <img class="content__img" src="img/highlight.svg" alt=""/>
             <h1 class="content__name-txt">Услуги и сервисы</h1>
           </div>
           <ul class="content__right-mob no-select ul-clear">
@@ -137,7 +137,7 @@
               Читать далее<span class="content__read-more"></span>
             </button>
           </div>
-          <img class="content__topic-img" src="<%= imgPath %>topic-image.png" alt="изображение логотипа компании CPS"/>
+          <img class="content__topic-img" src="img/topic-image.png" alt="изображение логотипа компании CPS"/>
         </article>
       </section>
       <div class="remontBrands">
