исправил баг модалки на мобилке

--- a/src/index.html
+++ b/src/index.html
@@ -295,11 +295,7 @@
             и соглашаетесь с нашей
             <a class="modal__link hover" href="#">политикой конфиденциальности</a>
           </p>
-          <input
-            class="modal__submit hover"
-            type="submit"
-            name="send"
-            value="Отправить"/>
+          <input class="modal__submit hover" type="submit" name="send" value="Отправить"/>
         </form>
       </div>
     </dialog>
