мелкие исправления в коде

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
           <ul class="menu__list no-select ul-clear">
             <li class="menu__item"><a class="menu__link hover" href="#">Ремонт техники</a></li>
             <li class="menu__item"><a class="menu__link hover" href="#">Услуги и сервисы</a></li>
-            <li class="menu__item"><a class="menu__link hover" href="#">Корпоратвным клиентам</a></li>
+            <li class="menu__item"><a class="menu__link hover" href="#">Корпоративным клиентам</a></li>
             <li class="menu__item"><a class="menu__link hover" href="#">Продавцам техники</a></li>
             <li class="menu__item"><a class="menu__link hover" href="#">Партнерам</a></li>
             <li class="menu__item"><a class="menu__link hover" href="#">Производителям</a></li>
@@ -227,9 +227,7 @@
             </tbody>
             <tfoot>
               <tr>
-                <td>
-                  <div class="swiper-pagination prices__pagination"></div>
-                </td>
+                <td><div class="swiper-pagination prices__pagination"></div></td>
               </tr>
             </tfoot>
           </table>
@@ -260,19 +258,10 @@
           <h3 class="modal__title">Обратная связь</h3>
         </header>
         <form class="modal__form" action="" method="post">
-          <input class="input" type="text" name="name" placeholder="Имя" />
-          <input class="input" type="tel" name="phone" placeholder="Телефон" />
-          <input
-            class="input"
-            type="email"
-            name="email"
-            placeholder="Электронная почта"/>
-          <textarea
-            class="input input--width"
-            name="message"
-            placeholder="Сообщение"
-            rows="4">
-          </textarea>
+          <input class="input" type="text" name="name" placeholder="Имя">
+          <input class="input" type="tel" name="phone" placeholder="Телефон">
+          <input class="input" type="email" name="email" placeholder="Электронная почта">
+          <textarea class="input input--width" name="message" placeholder="Сообщение" rows="4"></textarea>
           <p>Нажимая "Отправить", вы даете согласие на
             <a class="modal__link hover" href="#">обработку персональных данных</a> 
             и соглашаетесь с нашей
